--- a/blas/config/cblas/Makefile.in
+++ b/blas/config/cblas/Makefile.in
@@ -37,8 +37,8 @@ LOADER = $(FC)
 # Flags for Compilers
 #-----------------------------------------------------------------------------
 
-CFLAGS = -O3 -DADD_
-FFLAGS = -O3  
+CFLAGS = -O3 -mavx2 -DADD_
+FFLAGS = -O3 -mavx2
 
 #-----------------------------------------------------------------------------
 # Archive programs and flags
